--- a/index.html
+++ b/index.html
@@ -4,8 +4,138 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>influencer gear practice</title>
+    <link rel="stylesheet" href="styles/style.css">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <header>
+        <nav>
+            <h2>Influencer products</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log in</a></li>
+                <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-cart-plus"></i></a></li>
+            </ul>
+        </nav>
+        <div class="banner-section">
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h2 class="banner-title">
+                        Influencer
+                        Start your Journey as Influencer
+                    </h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <div class="button">
+                        <button class="btn-primary">Prebook now <i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
+                </div>
+                <div class="banner-image">
+                    <img src="./images/main-camera.png" alt="">
+                </div>
+            </div>
+        </div>      
+    </header>
+
+    <main>
+        <section>
+            <div class="partner-container">
+                <div class="partner-img">
+                    <img src="./logos/Alibaba.svg" alt="">
+                </div>
+                <div class="partner-img">
+                    <img src="./logos/Daraz.pk Logo.svg" alt="">
+                </div>
+                <div class="partner-img">
+                    <img src="./logos/Amazon.svg" alt="">
+                </div>
+                <div class="partner-img">
+                    <img src="./logos/Ebay.svg" alt="">
+                </div>
+                <div class="partner-img">
+                    <img src="./logos/Rakuten.svg" alt="">
+                </div>
+                <div class="partner-img">
+                    <img src="./logos/Walmart.svg" alt="">
+                </div>
+                <div class="partner-img">
+                    <img src="./logos/Target.svg" alt="">
+                </div>
+            </div>          
+        </section>
+
+        <!-- /* collection section start */ -->
+
+        <section class="prducts-section">
+            <h2>popular collection</h2>
+            <div class="grid-container">
+                <div class="single-card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Flex tripod</h3>
+                    <h4>$50.48</h4>
+                    <p class="product-discription">
+                        Worldwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="single-card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Flex tripod</h3>
+                    <h4>$50.48</h4>
+                    <p class="product-discription">
+                        Worldwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="single-card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Flex tripod</h3>
+                    <h4>$50.48</h4>
+                    <p class="product-discription">
+                        Worldwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="single-card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Flex tripod</h3>
+                    <h4>$50.48</h4>
+                    <p class="product-discription">
+                        Worldwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="single-card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Flex tripod</h3>
+                    <h4>$50.48</h4>
+                    <p class="product-discription">
+                        Worldwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+                <div class="single-card">
+                    <img src="./images/tripod.png" alt="">
+                    <h3>Flex tripod</h3>
+                    <h4>$50.48</h4>
+                    <p class="product-discription">
+                        Worldwide shifting available
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+
+
+
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
